--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,44 +1,124 @@
 ---
 interface Props {
-	title: string;
+   title: string;
 }
 
 const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<!-- links lg -->
-		<link href="https://www.lg.com/us/home-electrification/css/hsad-style.css" rel="stylesheet" type="text/css">
-		<link href="https://www.lg.com/us/home-electrification/css/sim.css" rel="stylesheet" type="text/css">
-		<link href="https://www.lg.com/us/home-electrification/css/skeleton.css" rel="stylesheet" type="text/css">
-		<link href="https://www.lg.com/us/home-electrification/css/slider-style.css" rel="stylesheet" type="text/css">
-		<link href="https://www.lg.com/us/home-electrification/plugins/slick/slick.css" rel="stylesheet" type="text/css">
-		<link href="https://www.lg.com/us/home-electrification/plugins/slick/slick-theme.css" rel="stylesheet" type="text/css">
-		<!-- script webflow -->
-		<script is:inline src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66157a07d442c5b866fd31e5" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<html
+   data-wf-page="66157a07d442c5b866fd31ec"
+   data-wf-site="66157a07d442c5b866fd31e5"
+>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="description" content="Astro description" />
+      <meta name="viewport" content="width=device-width" />
+      <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+      <meta name="generator" content={Astro.generator} />
 
-		<link href="css/normalize.css" rel="stylesheet" type="text/css">
-		<link href="css/webflow.css" rel="stylesheet" type="text/css">
-		<link href="css/electrification-8ec26d.webflow.css" rel="stylesheet" type="text/css">
-		<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-		<link href="images/webclip.png" rel="apple-touch-icon">
-		<script is:inline type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-		
-		<script is:inline src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66157a07d442c5b866fd31e5" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script is:inline src="js/webflow.js" type="text/javascript"></script>
-		<script is:inline defer="" src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-autovideo@1/autovideo.js"></script>
+      <!-- links lg -->
+      <link
+         href="https://www.lg.com/us/home-electrification/css/hsad-style.css"
+         rel="stylesheet"
+         type="text/css"
+      />
+      <link
+         href="https://www.lg.com/us/home-electrification/css/sim.css"
+         rel="stylesheet"
+         type="text/css"
+      />
+      <link
+         href="https://www.lg.com/us/home-electrification/css/skeleton.css"
+         rel="stylesheet"
+         type="text/css"
+      />
+      <link
+         href="https://www.lg.com/us/home-electrification/css/slider-style.css"
+         rel="stylesheet"
+         type="text/css"
+      />
+      <link
+         href="https://www.lg.com/us/home-electrification/plugins/slick/slick.css"
+         rel="stylesheet"
+         type="text/css"
+      />
+      <link
+         href="https://www.lg.com/us/home-electrification/plugins/slick/slick-theme.css"
+         rel="stylesheet"
+         type="text/css"
+      />
 
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
+      <link href="css/normalize.css" rel="stylesheet" type="text/css" />
+      <link href="css/webflow.css" rel="stylesheet" type="text/css" />
+      <link
+         href="css/electrification-8ec26d.webflow.css"
+         rel="stylesheet"
+         type="text/css"
+      />
+      <script is:inline defer type="text/javascript">
+         !(function (o, c) {
+            var n = c.documentElement,
+               t = " w-mod-";
+            (n.className += t + "js"),
+               ("ontouchstart" in o ||
+                  (o.DocumentTouch && c instanceof DocumentTouch)) &&
+                  (n.className += t + "touch");
+         })(window, document);
+      </script>
+      <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+      <link href="images/webclip.png" rel="apple-touch-icon" />
+      <link
+         href="https://www.lg.com/us/home-electrification/css/hsad-style.css"
+         rel="stylesheet"
+         type="text/css"
+      />
 
-	</body>
+      <!-- scripts -->
+      <script
+         is:inline
+         src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66157a07d442c5b866fd31e5"
+         defer
+         type="text/javascript"
+         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+         crossorigin="anonymous"></script>
+
+    <!--   <script is:inline src="js/webflow.js" type="text/javascript" defer
+      ></script> -->
+
+      <!-- style -->
+      <style>
+         .w-slider-dot {
+            background-color: #c4c4c5 !important;
+         }
+         .w-active {
+            background-color: #a50034 !important;
+         }
+         @media screen and (max-width: 479px) {
+            .w-slider-dot {
+               width: 0.5em !important;
+               height: 0.5em !important;
+            }
+         }
+
+         @font-face {
+            font-family: "Lg Smart" !important;
+      s   }
+      </style>
+
+      <title>Electrification</title>
+   </head>
+   <body>
+      <div class="w-embed">
+         <slot />
+      </div>
+
+      <script
+         defer
+         is:inline
+         type="text/javascript"
+         src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+      ></script>
+   </body>
 </html>
