--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,14 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Webflow from '../components/Webflow.astro';
-
-
-
+import Layout from "../layouts/Layout.astro";
+import Webflow from "../components/Webflow.astro";
+import Carrossel from "../components/Carousel";
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 		<Webflow />
+		<Carrossel />
 	</main>
 </Layout>
 
-<style>
-
-	
-</style>
+<style></style>
